checkpoint commit - integration tests still failing, trying with shaded jar for hadoop minicluster