@@ -12,7 +12,6 @@
 
   <properties>
     <main.basedir>${project.parent.basedir}</main.basedir>
-    <hadoop.version>3.2.4</hadoop.version>
     <guava.version>27.0.1-jre</guava.version>
     <jersey-servlet.version>1.10</jersey-servlet.version>
     <snappy-java.version>1.1.10.3</snappy-java.version>
@@ -37,10 +36,10 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
       <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-tomcat</artifactId>
-        </exclusion>
+<!--        <exclusion>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-tomcat</artifactId>-->
+<!--        </exclusion>-->
         <exclusion>
           <groupId>org.elasticsearch.client</groupId>
           <artifactId>elasticsearch-rest-client</artifactId>
@@ -196,7 +195,7 @@
 
     <!-- HBase Mini Cluster-->
     <dependency>
-      <groupId>org.gbif</groupId>
+      <groupId>org.gbif.occurrence</groupId>
       <artifactId>occurrence-hadoop-minicluster</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
@@ -211,7 +210,6 @@
       <artifactId>log4j-core</artifactId>
       <version>2.14.1</version>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -242,7 +240,6 @@
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
             <argLine>
-              --illegal-access=permit
               --add-opens java.base/java.lang=ALL-UNNAMED
               --add-opens java.base/java.lang.reflect=ALL-UNNAMED
               --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
